fix body overflow @ offcanvas button

--- a/wp-content/themes/municipio-highschool/assets/source/sass/components/button/_button.scss
+++ b/wp-content/themes/municipio-highschool/assets/source/sass/components/button/_button.scss
@@ -29,7 +29,7 @@
     font-size: $btn-lg-font-size;
 }
 
-.btn + .btn {
+.btn:not(.btn-offcanvas) + .btn {
     margin-left: .5rem;
 }
 
